# controllers/review_controller.go
@@ -5,6 +5,7 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/gowesmart/api-gowesmart/exceptions"
 	_ "github.com/gowesmart/api-gowesmart/model/web"
 	"github.com/gowesmart/api-gowesmart/model/web/request"
 	_ "github.com/gowesmart/api-gowesmart/model/web/response"
@@ -23,54 +24,54 @@ func NewReviewController(reviewService *services.ReviewService) *ReviewControlle
 }
 
 // CreateReview godoc
-//
-//	@Summary		Create a review
-//	@Description	Create a new review
-//	@Tags			Reviews
-//	@Accept			json
-//	@Produce		json
-//	@Param			review		body		request.CreateReviewRequest	true	"Review body"
-//	@Success		201		{object}	web.WebSuccess[response.ReviewResponse]
-//	@Failure		400		{object}	web.WebBadRequestError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/reviews [post]
+// @Summary Create a review
+// @Description	Create a new review
+// @Tags Reviews
+// @Accept json
+// @Produce json
+// @Param Authorization	header string true	"Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
+// @Param review body request.CreateReviewRequest true	"Review body"
+// @Success 201 {object} web.WebSuccess[response.ReviewResponse]
+// @Failure 400	{object} web.WebBadRequestError
+// @Failure 500 {object} web.WebInternalServerError
+// @Router /api/reviews [post]
 func (controller *ReviewController) CreateReview(c *gin.Context) {
-	var reviewReq request.CreateReviewRequest
 
-	err := c.ShouldBindJSON(&reviewReq)
+	claims, err := utils.ExtractTokenClaims(c)
 	utils.PanicIfError(err)
 
-	res, err := controller.reviewService.CreateReview(c, &reviewReq)
+	var reviewReq request.CreateReviewRequest
+	err = c.ShouldBindJSON(&reviewReq)
+	utils.PanicIfError(err)
+
+	res, err := controller.reviewService.CreateReview(c, &reviewReq, claims.UserID)
 	utils.PanicIfError(err)
 
 	utils.ToResponseJSON(c, http.StatusCreated, res, nil)
 }
 
 // UpdateReview godoc
-//
-//	@Summary		Update a review
-//	@Description	Update an existing review
-//	@Tags			Reviews
-//	@Accept			json
-//	@Produce		json
-//	@Param			id		path		uint						true	"Review ID"
-//	@Param			review		body		request.UpdateReviewRequest	true	"Review body"
-//	@Success		200		{object}	web.WebSuccess[response.ReviewResponse]
-//	@Failure		400		{object}	web.WebBadRequestError
-//	@Failure		404		{object}	web.WebNotFoundError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/reviews/{id} [patch]
+// @Summary Update a review
+// @Description	Update an existing review
+// @Tags Reviews
+// @Accept json
+// @Produce json
+// @Param id path uint true	"Review ID"
+// @Param review body request.UpdateReviewRequest	true	"Review body"
+// @Success 200	{object} web.WebSuccess[response.ReviewResponse]
+// @Failure 400	{object} web.WebBadRequestError
+// @Failure 404	{object} web.WebNotFoundError
+// @Failure 500	{object} web.WebInternalServerError
+// @Router /api/reviews/{id} [patch]
 func (controller *ReviewController) UpdateReview(c *gin.Context) {
 	var reviewReq request.UpdateReviewRequest
-
 	err := c.ShouldBindJSON(&reviewReq)
 	utils.PanicIfError(err)
 
-	idStr := c.Param("id")
-	id, err := strconv.ParseUint(idStr, 10, 32)
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-		return
+		utils.PanicIfError(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
 
 	res, err := controller.reviewService.UpdateReview(c, uint(id), &reviewReq)
@@ -80,22 +81,19 @@ func (controller *ReviewController) UpdateReview(c *gin.Context) {
 }
 
 // DeleteReview godoc
-//
-//	@Summary		Delete a review
-//	@Description	Delete a review by ID
-//	@Tags			Reviews
-//	@Produce		json
-//	@Param			id		path		uint	true	"Review ID"
-//	@Success		204		{object}	web.WebSuccess[response.ReviewResponse]
-//	@Failure		404		{object}	web.WebNotFoundError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/reviews/{id} [delete]
+// @Summary Delete a review
+// @Description	Delete a review by ID
+// @Tags Reviews
+// @Produce json
+// @Param id path uint true	"Review ID"
+// @Success 204	{object} web.WebSuccess[response.ReviewResponse]
+// @Failure 404	{object} web.WebNotFoundError
+// @Failure 500	{object} web.WebInternalServerError
+// @Router /api/reviews/{id} [delete]
 func (controller *ReviewController) DeleteReview(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.ParseUint(idStr, 10, 32)
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-		return
+		utils.PanicIfError(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
 
 	err = controller.reviewService.DeleteReview(c, uint(id))
@@ -105,14 +103,13 @@ func (controller *ReviewController) DeleteReview(c *gin.Context) {
 }
 
 // GetAllReviews godoc
-//
-//	@Summary		Get all reviews
-//	@Description	Get all reviews
-//	@Tags			Reviews
-//	@Produce		json
-//	@Success		200		{object}	web.WebSuccess[[]response.ReviewResponse]
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/reviews [get]
+// @Summary Get all reviews
+// @Description	Get all reviews
+// @Tags Reviews
+// @Produce json
+// @Success 200	{object} web.WebSuccess[[]response.ReviewResponse]
+// @Failure 500	{object} web.WebInternalServerError
+// @Router /api/reviews [get]
 func (controller *ReviewController) GetAllReviews(c *gin.Context) {
 	res, err := controller.reviewService.GetAllReviews(c)
 	utils.PanicIfError(err)
@@ -121,22 +118,19 @@ func (controller *ReviewController) GetAllReviews(c *gin.Context) {
 }
 
 // GetReviewByID godoc
-//
-//	@Summary		Get a review by ID
-//	@Description	Get a review by ID
-//	@Tags			Reviews
-//	@Produce		json
-//	@Param			id		path		uint	true	"Review ID"
-//	@Success		200		{object}	web.WebSuccess[response.ReviewResponse]
-//	@Failure		404		{object}	web.WebNotFoundError
-//	@Failure		500		{object}	web.WebInternalServerError
-//	@Router			/api/reviews/{id} [get]
+// @Summary Get a review by ID
+// @Description	Get a review by ID
+// @Tags Reviews
+// @Produce json
+// @Param id path uint true	"Review ID"
+// @Success 200	{object} web.WebSuccess[response.ReviewResponse]
+// @Failure 404	{object} web.WebNotFoundError
+// @Failure 500	{object} web.WebInternalServerError
+// @Router /api/reviews/{id} [get]
 func (controller *ReviewController) GetReviewByID(c *gin.Context) {
-	idStr := c.Param("id")
-	id, err := strconv.ParseUint(idStr, 10, 32)
+	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
-		return
+		utils.PanicIfError(exceptions.NewCustomError(http.StatusBadRequest, "id must be an integer"))
 	}
 
 	res, err := controller.reviewService.GetReviewByID(c, uint(id))
